# TheForceEngineVR

./: .gitignore  BuildInstaller.ps1  CMakeLists.txt  README.md  TheForceEngineVR.sln  UpdateVersionFile.ps1
.github/workflows/: android-legacy.yml  android.yml  windows-sln.yml  windows-vr-cmake.yml  windows-vr-sln.yml  windows-vr.yml
TheForceEngine/: CMakeLists.txt  TheForceEngine.rc  TheForceEngineVR.vcxproj  TheForceEngineVR.vcxproj.filters  gitVersion.h  main.cpp
TheForceEngine/Android/: build.gradle  settings.gradle
TheForceEngine/Android/gradle/wrapper/: gradle-wrapper.properties
TheForceEngine/Android/tfe/: build.gradle  tfe_developer.jks
TheForceEngine/Android/tfe/src/main/: AndroidManifest.xml
TheForceEngine/Android/tfe/src/main/assets/: readme.txt
TheForceEngine/Android/tfe/src/main/java/com/tfe/core/: AndroidActivity.java
TheForceEngine/Android/tfe/src/main/java/com/tfe/game/: TfeActivity.java
TheForceEngine/Android/tfe/src/main/res/values/: strings.xml  themes.xml
TheForceEngine/Android/tfe/src/main/res/values-night/: themes.xml
TheForceEngine/Android/tfe/src/quest/: AndroidManifest.xml
TheForceEngine/Documentation/markdown/: Credits.md  TheForceEngine.md  TheForceEngineManual.md
TheForceEngine/Installer/: EULA.rtf  Installer.iss
TheForceEngine/Mods/TFE/AdjustableHud/: CMakeLists.txt
TheForceEngine/Shaders/: blit.frag  blit.vert  bloom.vert  bloomDownsample.frag  bloomMerge.frag  bloomThreshold.frag  clipping.h  gpu_render_modelHologram.frag  gpu_render_modelHologram.vert  gpu_render_modelSolid.frag  gpu_render_modelSolid.vert  gpu_render_quad.frag  gpu_render_quad.vert  gpu_render_sprite.frag  gpu_render_sprite.vert  gpu_render_wall.frag  gpu_render_wall.vert  imGui.frag  imGui.vert  line2d.frag  line2d.vert  overlay.frag  overlay.vert  textureSampleFunc.h  vr.h
TheForceEngine/TFE_A11y/: CMakeLists.txt
TheForceEngine/TFE_Archive/: CMakeLists.txt
TheForceEngine/TFE_Asset/: CMakeLists.txt  imageAsset.cpp
TheForceEngine/TFE_Audio/: CMakeLists.txt  systemMidiDevice.h
TheForceEngine/TFE_DarkForces/: CMakeLists.txt  darkForcesMain.cpp  darkForcesMain.h  hud.cpp  mission.cpp  player.cpp  weapon.cpp
TheForceEngine/TFE_DarkForces/GameUI/: agentMenu.cpp  escapeMenu.cpp  menu.cpp
TheForceEngine/TFE_DarkForces/Landru/: cutscene_player.cpp
TheForceEngine/TFE_Editor/: CMakeLists.txt  history.cpp
TheForceEngine/TFE_Editor/LevelEditor/: levelEditorData.cpp
TheForceEngine/TFE_ExternalData/: CMakeLists.txt
TheForceEngine/TFE_FileSystem/: CMakeLists.txt  paths-posix.cpp  paths.cpp  paths.h
TheForceEngine/TFE_ForceScript/: CMakeLists.txt
TheForceEngine/TFE_FrontEndUI/: CMakeLists.txt  frontEndUi.cpp
TheForceEngine/TFE_Game/: CMakeLists.txt  igame.h  saveSystem.cpp
TheForceEngine/TFE_Input/: CMakeLists.txt  input.cpp  input.h  inputMapping.cpp  inputMapping.h  touchInput.cpp  touchInput.h
TheForceEngine/TFE_Jedi/: CMakeLists.txt
TheForceEngine/TFE_Jedi/Level/: rtexture.cpp
TheForceEngine/TFE_Jedi/Renderer/: jediRenderer.cpp  rsectorRender.h
TheForceEngine/TFE_Jedi/Renderer/RClassic_GPU/: frustum.cpp  modelGPU.cpp  rclassicGPU.cpp  rsectorGPU.cpp  screenDrawGPU.cpp  screenDrawGPU.h
TheForceEngine/TFE_Memory/: CMakeLists.txt  memoryRegion.cpp
TheForceEngine/TFE_Polygon/: CMakeLists.txt
TheForceEngine/TFE_PostProcess/: CMakeLists.txt  blit.cpp  blit.h  bloomDownsample.cpp  bloomDownsample.h  bloomMerge.cpp  bloomMerge.h  bloomThreshold.cpp  bloomThreshold.h  overlay.cpp  overlay.h  postprocess.cpp  postprocesseffect.h
TheForceEngine/TFE_RenderBackend/: CMakeLists.txt  renderBackend.h  shader.h  textureGpu.h
TheForceEngine/TFE_RenderBackend/Win32OpenGL/: gl.h  gl_es.h  glad.c  glad_es.c  indexBuffer.cpp  openGL_Caps.cpp  openGL_Caps.h  openGL_Debug.cpp  openGL_Debug.h  renderBackend.cpp  renderState.cpp  renderTarget.cpp  renderTarget.h  screenCapture.cpp  screenCapture.h  shader.cpp  shaderBuffer.cpp  textureGpu.cpp  vertexBuffer.cpp
TheForceEngine/TFE_RenderShared/: CMakeLists.txt  imGuiDraw.cpp  imGuiDraw.h  lineDraw2d.cpp  lineDraw3d.cpp  quadDraw2d.cpp
TheForceEngine/TFE_Settings/: CMakeLists.txt  settings.cpp  settings.h
TheForceEngine/TFE_System/: CMakeLists.txt  android.cpp  android.h  iniParser.h  log.cpp  math.cpp  math.h  system.cpp  system.h  types.h
TheForceEngine/TFE_Ui/: CMakeLists.txt  ui.cpp
TheForceEngine/TFE_Ui/imGUI/: imconfig.h
TheForceEngine/TFE_Vr/: CMakeLists.txt  VrWrapper.h  link_remove.bat  link_vr_wrapper.bat  vr.cpp  vr.h
TheForceEngine/TFE_Vr/Lib/x64/: VrWrapper.lib
TheForceEngine/TFE_Vr/VrWrapper/: VrWrapper.h
TheForceEngine/TFE_Vr/VrWrapper/Lib/Windows/x64/: VrWrapper.lib
TheForceEngine/sdl2_android/include/: SDL_config.h  SDL_revision.h
