project(TFE_DarkForces)
set(SOURCES
	Actor/
	Actor/actor.cpp
	Actor/actor.h
	Actor/actorInternal.h
	Actor/actorModule.h
	Actor/actorSerialization.cpp
	Actor/actorSerialization.h
	Actor/animTables.cpp
	Actor/animTables.h
	Actor/bobaFett.cpp
	Actor/bobaFett.h
	Actor/dragon.cpp
	Actor/dragon.h
	Actor/enemies.cpp
	Actor/enemies.h
	Actor/exploders.cpp
	Actor/exploders.h
	Actor/flyers.cpp
	Actor/flyers.h
	Actor/mousebot.cpp
	Actor/mousebot.h
	Actor/phaseOne.cpp
	Actor/phaseOne.h
	Actor/phaseThree.cpp
	Actor/phaseThree.h
	Actor/phaseTwo.cpp
	Actor/phaseTwo.h
	Actor/scenery.cpp
	Actor/scenery.h
	Actor/sewer.cpp
	Actor/sewer.h
	Actor/troopers.cpp
	Actor/troopers.h
	Actor/turret.cpp
	Actor/turret.h
	Actor/welder.cpp
	Actor/welder.h
	GameUI/agentMenu.cpp
	GameUI/agentMenu.h
	GameUI/delt.cpp
	GameUI/delt.h
	GameUI/editBox.cpp
	GameUI/editBox.h
	GameUI/escapeMenu.cpp
	GameUI/escapeMenu.h
	GameUI/menu.cpp
	GameUI/menu.h
	GameUI/missionBriefing.cpp
	GameUI/missionBriefing.h
	GameUI/pda.cpp
	GameUI/pda.h
	GameUI/uiDraw.cpp
	GameUI/uiDraw.h
	Landru/cutscene.cpp
	Landru/cutscene.h
	Landru/cutscene_film.cpp
	Landru/cutscene_film.h
	Landru/cutscene_player.cpp
	Landru/cutscene_player.h
	Landru/cutsceneList.cpp
	Landru/cutsceneList.h
	Landru/lactor.cpp
	Landru/lactor.h
	Landru/lactorAnim.cpp
	Landru/lactorAnim.h
	Landru/lactorCust.cpp
	Landru/lactorCust.h
	Landru/lactorDelt.cpp
	Landru/lactorDelt.h
	Landru/lcanvas.cpp
	Landru/lcanvas.h
	Landru/ldraw.cpp
	Landru/ldraw.h
	Landru/lfade.cpp
	Landru/lfade.h
	Landru/lfont.cpp
	Landru/lfont.h
	Landru/lmusic.cpp
	Landru/lmusic.h
	Landru/lpalette.cpp
	Landru/lpalette.h
	Landru/lrect.cpp
	Landru/lrect.h
	Landru/lsound.cpp
	Landru/lsound.h
	Landru/lsystem.cpp
	Landru/lsystem.h
	Landru/ltimer.cpp
	Landru/ltimer.h
	Landru/lview.cpp
	Landru/lview.h
	Landru/textCrawl.cpp
	Landru/textCrawl.h
	agent.cpp
	agent.h
	animLogic.cpp
	animLogic.h
	automap.cpp
	automap.h
	briefingList.cpp
	briefingList.h
	cheats.cpp
	cheats.h
	config.cpp
	config.h
	darkForcesMain.cpp
	darkForcesMain.h
	gameMessage.cpp
	gameMessage.h
	gameMusic.cpp
	gameMusic.h
	generator.cpp
	generator.h
	hitEffect.cpp
	hitEffect.h
	hud.cpp
	hud.h
	item.cpp
	item.h
	logic.cpp
	logic.h
	mission.cpp
	mission.h
	pickup.cpp
	pickup.h
	player.cpp
	player.h
	playerCollision.cpp
	playerCollision.h
	playerLogic.h
	projectile.cpp
	projectile.h
	random.cpp
	random.h
	sound.cpp
	sound.h
	time.cpp
	time.h
	updateLogic.cpp
	updateLogic.h
	util.cpp
	util.h
	vueLogic.cpp
	vueLogic.h
	weapon.cpp
	weapon.h
	weaponFireFunc.cpp
	weaponFireFunc.h
)

#add_custom_target(${PROJECT_NAME} "" SOURCES ${SOURCES})
add_library(${PROJECT_NAME} OBJECT ${SOURCES})
target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX Sources FILES ${SOURCES})
